navigation bars created

--- a/frontend/src/Components/header/header.styles.scss
+++ b/frontend/src/Components/header/header.styles.scss
@@ -1,5 +1,5 @@
 .header {
-  height: 440px;
+  height: 480px;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -13,7 +13,7 @@
   .logo-container {
     height: 100%;
     width: 70px;
-    padding: 25px;
+    // padding: 25px;
   }
 
   .options {
